Fix buttons to also be displayed correctly on Safari-iOS

--- a/frontend/src/components/playground/Playground.module.css
+++ b/frontend/src/components/playground/Playground.module.css
@@ -7,7 +7,7 @@
 }
 
 .buttons {
-  width: 50%;
+  width: auto;
   display: flex;
   justify-content: space-between;
 }
