--- a/frontend/src/components/register-login-form/RegisterLoginForm.module.css
+++ b/frontend/src/components/register-login-form/RegisterLoginForm.module.css
@@ -9,5 +9,5 @@
 
 .registerBtn {
   margin-top: 3vh;
-  width: 50%;
+  width: auto;
 }
